--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,24 @@
 body {
 	margin: 0 auto;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	background-color: azure;
+	background-image: url(../images/psychic-img.jpeg);
+	background-size: 100%;
 }
 
 .container {
-	width: 60%;
-	height: 300px;
-	background-color: aliceblue;
-	border: 2px solid orange;
+	width: 50%;
+	height: 250px;
+	margin: 400px;
+	margin-top: 20px;
+	background-color: rgb(2, 44, 82);
+	border: 2px solid rgb(180, 3, 18);
+	color: white;
 }
 
 h1 {
-	font-size: 34px;
-	padding-top: 20px;
+	font-size: 25px;
+	padding-top: 10px;
+	padding-bottom: 20px;
 	text-align: center;
 }
 .content-div {
@@ -22,5 +27,5 @@ h1 {
 p {
 	font-size: 24px;
 	width: 300px;
-	line-height: 70px;
+	line-height: 40px;
 }
